--- a/views/pet.ejs
+++ b/views/pet.ejs
@@ -14,28 +14,28 @@
                 <div class="title">
                     Pets
                 </div>
-                <% if (locals.allUsers) { %>
+                <% if (locals.allPets) { %>
                     <div class="table-container">
                         <table class="table is-bordered is-hoverable is-striped is-narrow">
                             <thead>
                                 <tr>
                                     <th> # </th>
                                     <th> Pet Name </th>
-                                    <th> &nbsp; </th>
+                                    
                                 </tr>
                             </thead>
                             <% let i=0; %>
                                 <% for(i=0; i < allPets.length; i++) { %>
                                     <tr>
                                         <td>
+                                            <%= allPets[i].pet_id %>
+                                        </td>
+
+                                        <td>
                                             <%= allPets[i].pet_name %>
                                         </td>
                                         
-                                        <td><a href="/deleteUser?id=<%= allPets[i].pet_id %>">
-                                                <span class="icon is-small">
-                                                    <i class="fas fa-user-times"></i>
-                                                </span></a>
-                                        </td>
+                                        
                                     </tr>
                                     <% } %>
                                         <tfoot>
